feat: work, education and 1/2 skills sections

--- a/index.html
+++ b/index.html
@@ -41,6 +41,75 @@
       </section>
     </header>
     <main>
+      <section id="education">
+        <h2 class="section-name">Education</h2>
+        <figure class="header-caption" id="school">
+          <h3>Gymnasium №13, Minsk</h3>
+          <figcaption>
+            2010 &mdash; 2021, Graduated with the "Gold medal for academic
+            excellence". Average grade: 9.8*
+          </figcaption>
+        </figure>
+        <!-- <figure class="header-caption" id="english">
+          <h3>English with Private Tutor</h3>
+          <figcaption>
+            2010 &mdash; 2020, Active learning of English language, golden medal for
+            the victory in English competition.
+          </figcaption>
+        </figure> -->
+        <figure class="header-caption" id="university">
+          <h3>
+            Belarusian State University, Faculty of Applied Math and Computer
+            Science
+          </h3>
+          <figcaption>
+            2021 &mdash; 2025, Currently a 2nd course student. Average grade:
+            8.5. Highest grade: 10.0 - Computer Science and Software
+            Development. Member of the university's soccer team.
+          </figcaption>
+        </figure>
+        <p class="note">* Belarusian grading scale is 10-point</p>
+      </section>
+
+      <section id="work-experience">
+        <section class="work" id="tti-studio">
+          <h2 class="section-name">Work Experience</h2>
+          <figure class="header-caption">
+            <h3>Team Lead / Programmer</h3>
+            <figcaption>
+              2020 &mdash; 2022, TTI Studio (Self-Gathered International Team of
+              Developers)
+            </figcaption>
+          </figure>
+          <p>
+            When I was a high-school student I started self-studying game
+            development and programming in general. After 1,5 years of learning
+            I decided to team-up with some artist to create our first game.
+          </p>
+
+          <p>
+            So I found a young brazilian artist on the community website of the
+            Game Maker Engine. During the development our team had grown to 4
+            people as we added music composer and sound designer.
+          </p>
+          <p>
+            Both of them were twice as old as me at that moment but I still
+            managed to coordinate our team-work despite the fact that all the
+            team-members worked for free, driven by the game idea and possible
+            revenue share as a result.
+          </p>
+          <p>
+            After 2 years of hard work and at the cost of our spare time we
+            finished the game called
+            <a href="https://thirty-three-infinities.itch.io/sunset-forest"
+              >Sunset Forest</a
+            >
+            under the name of
+            <a href="https://thirty-three-infinities.itch.io/">TTI Studio</a>.
+          </p>
+        </section>
+      </section>
+
       <section id="skills">
         <h2 class="section-name">Skills & Competences</h2>
 
@@ -118,6 +187,8 @@
           </ul>
         </section>
       </section>
+
+      <footer></footer>
     </main>
   </body>
 </html>
