fix: readme and interexchange image location

--- a/index.html
+++ b/index.html
@@ -31,10 +31,7 @@
           <li id="adress">Minsk, Belarus</li>
           <li id="inter-exchange">
             <a href="https://www.interexchange.org/work-travel-usa/">
-              <img
-                src="/Images/InterExchangeLogo.png"
-                alt="InterExchangeLogo"
-              />
+              <img src="Images/InterExchangeLogo.png" alt="InterExchangeLogo" />
             </a>
           </li>
         </ul>
