feat: add skill boxes html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       rel="stylesheet"
     />
     <title>CV - Petrikevich</title>
+    <script src="skillBoxesAuto.js"></script>
   </head>
   <body>
     <header>
@@ -60,7 +61,7 @@
             Science
           </h3>
           <figcaption>
-            2021 &mdash; 2025, Currently a 2nd course student. Average grade:
+            2021 &mdash; present, Currently a 2nd course student. Average grade:
             8.5. Highest grade: 10.0 - Computer Science and Software
             Development. Member of the university's soccer team.
           </figcaption>
@@ -110,7 +111,7 @@
       <section id="skills">
         <h2 class="section-name">Skills & Competences</h2>
 
-        <ul class="boxes">
+        <!-- <ul class="boxes">
           <li><a href="#diligence">Diligence</a></li>
           <li><a href="#quick-learning">Quick Learning</a></li>
           <li><a href="#leadership">Leadership</a></li>
@@ -119,69 +120,80 @@
           <li><a href="#teamwork">Teamwork</a></li>
           <li><a href="#time-managment">Time Managment</a></li>
           <li><a href="#responsibility">Responsibility</a></li>
-        </ul>
+        </ul> -->
 
-        <section class="skill" id="diligence">
-          <h3>Diligence</h3>
-          <ul class="skill-description">
-            <li></li>
-          </ul>
-        </section>
-
-        <section class="skill" id="quick-learning">
-          <h3>Quick Learning</h3>
-          <ul class="skill-description">
-            <li></li>
-            <li></li>
-          </ul>
-        </section>
-
-        <section class="skill" id="leadership">
-          <h3>Leadership</h3>
-          <ul class="skill-description">
-            <li></li>
-            <li></li>
-          </ul>
-        </section>
-
-        <section class="skill" id="communication">
-          <h3>Communication</h3>
-          <ul class="skill-description">
-            <li></li>
-            <li></li>
-          </ul>
-        </section>
-
-        <section class="skill" id="persistence">
-          <h3>Persistence</h3>
-          <ul class="skill-description">
-            <li></li>
-            <li></li>
-          </ul>
-        </section>
-
-        <section class="skill" id="teamwork">
-          <h3>Teamwork</h3>
-          <ul class="skill-description">
-            <li></li>
-            <li></li>
-          </ul>
-        </section>
-
-        <section class="skill" id="time-managment">
-          <h3>Time Managment</h3>
-          <ul class="skill-description">
-            <li></li>
-            <li></li>
-          </ul>
-        </section>
-
-        <section class="skill" id="responsibility">
-          <h3>Responsibility</h3>
-          <ul class="skill-description">
-            <li></li>
-            <li></li>
-          </ul>
+        <section id="skill-boxes">
+          <figure class="skill" id="diligence">
+            <h3>Diligence</h3>
+            <figcaption>
+              <div class="flexible-width-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil
+                accusamus perferendis amet autem quas commodi magni expedita
+                eligendi ad exercitationem voluptate porro reiciendis adipisci
+                ipsa libero nam quidem fuga quos molestiae tempore modi
+                laboriosam, ducimus quae. Non minima quae voluptatibus magni
+                excepturi nesciunt fugiat explicabo accusantium rem. Dolorem,
+                nihil quas.
+              </div>
+            </figcaption>
+          </figure>
+          <figure class="skill" id="quick-learning">
+            <h3>Quick Learning</h3>
+            <figcaption>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet
+              itaque at veritatis vitae. Necessitatibus, voluptatum iure
+              assumenda aut fugit recusandae quisquam sunt veritatis eveniet
+              facere?
+            </figcaption>
+          </figure>
+          <figure class="skill" id="leadership">
+            <h3>Leadership</h3>
+            <figcaption>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Laboriosam cum ipsam impedit tenetur maiores facilis deleniti
+              dolores quasi dolorem soluta?
+            </figcaption>
+          </figure>
+          <figure class="skill" id="communication">
+            <h3>Communication</h3>
+            <figcaption>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit,
+              deserunt.
+            </figcaption>
+          </figure>
+          <figure class="skill" id="persistence">
+            <h3>Persistence</h3>
+            <figcaption>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic,
+              perferendis blanditiis dicta quaerat illum nisi nihil harum sunt
+              eos, et numquam placeat facilis nesciunt! Maxime assumenda,
+              cupiditate ducimus eum quibusdam molestiae, culpa delectus dolores
+              maiores veritatis expedita voluptatem explicabo aperiam.
+            </figcaption>
+          </figure>
+          <figure class="skill" id="teamwork">
+            <h3>Teamwork</h3>
+            <figcaption>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio
+              porro velit nulla, temporibus voluptas eligendi repudiandae
+              dolores? Maiores consectetur magni modi harum iusto ea debitis hic
+              earum. Ullam, expedita laudantium. Officia, optio quas?
+            </figcaption>
+          </figure>
+          <figure class="skill" id="time-managment">
+            <h3>Time Managment</h3>
+            <figcaption>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis,
+              mollitia magnam.
+            </figcaption>
+          </figure>
+          <figure class="skill" id="responsibility">
+            <h3>Responsibility</h3>
+            <figcaption>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos
+              asperiores repellendus sapiente esse blanditiis corporis.
+            </figcaption>
+          </figure>
         </section>
       </section>
 
