feat: skill descriptions make responsive

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
       rel="stylesheet"
     />
+    <!-- <script src="script.js" defer></script> -->
     <title>CV - Petrikevich</title>
-    <script src="skillBoxesAuto.js"></script>
   </head>
   <body>
     <header>
@@ -123,77 +123,72 @@
         </ul> -->
 
         <section id="skill-boxes">
-          <figure class="skill" id="diligence">
-            <h3>Diligence</h3>
-            <figcaption>
-              <div class="flexible-width-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil
-                accusamus perferendis amet autem quas commodi magni expedita
-                eligendi ad exercitationem voluptate porro reiciendis adipisci
-                ipsa libero nam quidem fuga quos molestiae tempore modi
-                laboriosam, ducimus quae. Non minima quae voluptatibus magni
-                excepturi nesciunt fugiat explicabo accusantium rem. Dolorem,
-                nihil quas.
-              </div>
-            </figcaption>
-          </figure>
-          <figure class="skill" id="quick-learning">
-            <h3>Quick Learning</h3>
-            <figcaption>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet
-              itaque at veritatis vitae. Necessitatibus, voluptatum iure
-              assumenda aut fugit recusandae quisquam sunt veritatis eveniet
-              facere?
-            </figcaption>
-          </figure>
-          <figure class="skill" id="leadership">
-            <h3>Leadership</h3>
-            <figcaption>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              Laboriosam cum ipsam impedit tenetur maiores facilis deleniti
-              dolores quasi dolorem soluta?
-            </figcaption>
-          </figure>
-          <figure class="skill" id="communication">
-            <h3>Communication</h3>
-            <figcaption>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit,
-              deserunt.
-            </figcaption>
-          </figure>
-          <figure class="skill" id="persistence">
-            <h3>Persistence</h3>
-            <figcaption>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic,
-              perferendis blanditiis dicta quaerat illum nisi nihil harum sunt
-              eos, et numquam placeat facilis nesciunt! Maxime assumenda,
-              cupiditate ducimus eum quibusdam molestiae, culpa delectus dolores
-              maiores veritatis expedita voluptatem explicabo aperiam.
-            </figcaption>
-          </figure>
-          <figure class="skill" id="teamwork">
-            <h3>Teamwork</h3>
-            <figcaption>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio
-              porro velit nulla, temporibus voluptas eligendi repudiandae
-              dolores? Maiores consectetur magni modi harum iusto ea debitis hic
-              earum. Ullam, expedita laudantium. Officia, optio quas?
-            </figcaption>
-          </figure>
-          <figure class="skill" id="time-managment">
-            <h3>Time Managment</h3>
-            <figcaption>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis,
-              mollitia magnam.
-            </figcaption>
-          </figure>
-          <figure class="skill" id="responsibility">
-            <h3>Responsibility</h3>
-            <figcaption>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos
-              asperiores repellendus sapiente esse blanditiis corporis.
-            </figcaption>
-          </figure>
+          <div class="flex-row">
+            <figure class="skill" id="diligence">
+              <h3>Diligence</h3>
+              <figcaption>
+                Ready to work as much as possible. Enough physical endurance to
+                stay long on the feet for a long period of time.
+              </figcaption>
+            </figure>
+            <figure class="skill" id="quick-learning">
+              <h3>Quick Learning</h3>
+              <figcaption>
+                Understand new things and concepts quickly. Stick to the concept
+                of neverending learning and self-improvemnt.
+              </figcaption>
+            </figure>
+            <figure class="skill" id="leadership">
+              <h3>Leadership</h3>
+              <figcaption>
+                Never afraid to take additional responsibility. Always try to do
+                my best in order to help the team-mates.
+              </figcaption>
+            </figure>
+            <figure class="skill" id="communication">
+              <h3>Communication</h3>
+              <figcaption>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit,
+                deserunt.
+              </figcaption>
+            </figure>
+          </div>
+
+          <div class="flex-row">
+            <figure class="skill" id="responsibility">
+              <h3>Responsibility</h3>
+              <figcaption>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos
+                asperiores repellendus sapiente esse blanditiis corporis.
+              </figcaption>
+            </figure>
+            <figure class="skill" id="time-managment">
+              <h3>Time Managment</h3>
+              <figcaption>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis,
+                mollitia magnam.
+              </figcaption>
+            </figure>
+            <figure class="skill" id="persistence">
+              <h3>Persistence</h3>
+              <figcaption>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic,
+                perferendis blanditiis dicta quaerat illum nisi nihil harum sunt
+                eos, et numquam placeat facilis nesciunt! Maxime assumenda,
+                cupiditate ducimus eum quibusdam molestiae, culpa delectus
+                dolores maiores veritatis expedita voluptatem explicabo aperiam.
+              </figcaption>
+            </figure>
+            <figure class="skill" id="teamwork">
+              <h3>Teamwork</h3>
+              <figcaption>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio
+                porro velit nulla, temporibus voluptas eligendi repudiandae
+                dolores? Maiores consectetur magni modi harum iusto ea debitis
+                hic earum. Ullam, expedita laudantium. Officia, optio quas?
+              </figcaption>
+            </figure>
+          </div>
         </section>
       </section>
 
