--- a/index.html
+++ b/index.html
@@ -39,36 +39,6 @@
       </section>
     </header>
     <main>
-      <section id="education">
-        <h2 class="section-name">Education</h2>
-        <figure class="header-caption" id="school">
-          <h3>Gymnasium №13, Minsk</h3>
-          <figcaption>
-            2010 &mdash; 2021, Graduated with the "Gold medal for academic
-            excellence". Average grade: 9.8*
-          </figcaption>
-        </figure>
-        <!-- <figure class="header-caption" id="english">
-          <h3>English with Private Tutor</h3>
-          <figcaption>
-            2010 &mdash; 2020, Active learning of English language, golden medal for
-            the victory in English competition.
-          </figcaption>
-        </figure> -->
-        <figure class="header-caption" id="university">
-          <h3>
-            Belarusian State University, Faculty of Applied Math and Computer
-            Science
-          </h3>
-          <figcaption>
-            2021 &mdash; present, Currently a 2nd course student. Average grade:
-            8.5. Highest grade: 10.0 - Computer Science and Software
-            Development. Member of the university's soccer team.
-          </figcaption>
-        </figure>
-        <p class="note">* Belarusian grading scale is 10-point</p>
-      </section>
-
       <section id="work-experience">
         <section class="work" id="tti-studio">
           <h2 class="section-name">Work Experience</h2>
@@ -108,6 +78,36 @@
         </section>
       </section>
 
+      <section id="education">
+        <h2 class="section-name">Education</h2>
+        <figure class="header-caption" id="school">
+          <h3>Gymnasium №13, Minsk</h3>
+          <figcaption>
+            2010 &mdash; 2021, Graduated with the "Gold medal for academic
+            excellence". Average grade: 9.8*
+          </figcaption>
+        </figure>
+        <!-- <figure class="header-caption" id="english">
+          <h3>English with Private Tutor</h3>
+          <figcaption>
+            2010 &mdash; 2020, Active learning of English language, golden medal for
+            the victory in English competition.
+          </figcaption>
+        </figure> -->
+        <figure class="header-caption" id="university">
+          <h3>
+            Belarusian State University, Faculty of Applied Math and Computer
+            Science
+          </h3>
+          <figcaption>
+            2021 &mdash; present, Currently a 2nd course student. Average grade:
+            8.5. Highest grade: 10.0 - Computer Science and Software
+            Development. Member of the university's soccer team.
+          </figcaption>
+        </figure>
+        <p class="note">* Belarusian grading scale is 10-point</p>
+      </section>
+
       <section id="skills">
         <h2 class="section-name">Skills & Competences</h2>
 
@@ -124,6 +124,33 @@
 
         <section id="skill-boxes">
           <div class="flex-row">
+            <figure class="skill" id="quick-learning">
+              <h3>Quick Learning</h3>
+              <figcaption>
+                Understand new things and learn new technologies quickly. Stick
+                to the concept of constant studying and self-improvement in
+                every aspect of life.
+              </figcaption>
+            </figure>
+            <figure class="skill" id="leadership">
+              <h3>Leadership</h3>
+              <figcaption>
+                Never afraid to take responsibility. Do my best in order to help
+                the team-mates in any circumstances.
+              </figcaption>
+            </figure>
+            <figure class="skill" id="communication">
+              <h3>Communication</h3>
+              <figcaption>
+                Consider communication to be the key to the success of any team
+                or company. Always stay polite and calm with customers and
+                colleagues. Strike up a conversation in any situation. Keep
+                practicing English daily.
+              </figcaption>
+            </figure>
+          </div>
+
+          <div class="flex-row">
             <figure class="skill" id="diligence">
               <h3>Diligence</h3>
               <figcaption>
@@ -131,68 +158,49 @@
                 stay long on the feet for a long period of time.
               </figcaption>
             </figure>
-            <figure class="skill" id="quick-learning">
-              <h3>Quick Learning</h3>
-              <figcaption>
-                Understand new things and concepts quickly. Stick to the concept
-                of neverending learning and self-improvemnt.
-              </figcaption>
-            </figure>
-            <figure class="skill" id="leadership">
-              <h3>Leadership</h3>
-              <figcaption>
-                Never afraid to take additional responsibility. Always try to do
-                my best in order to help the team-mates.
-              </figcaption>
-            </figure>
-            <figure class="skill" id="communication">
-              <h3>Communication</h3>
-              <figcaption>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit,
-                deserunt.
-              </figcaption>
-            </figure>
-          </div>
-
-          <div class="flex-row">
             <figure class="skill" id="responsibility">
               <h3>Responsibility</h3>
               <figcaption>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos
-                asperiores repellendus sapiente esse blanditiis corporis.
+                Punctual and attentive. Stay away from bad habbits. Used to
+                waking up early.
               </figcaption>
             </figure>
             <figure class="skill" id="time-managment">
               <h3>Time Managment</h3>
               <figcaption>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis,
-                mollitia magnam.
+                Experienced in time managment and used to multi-tasking. Prefer
+                scheduling and organizing own work and activities.
               </figcaption>
             </figure>
-            <figure class="skill" id="persistence">
+            <!-- <figure class="skill" id="persistence">
               <h3>Persistence</h3>
-              <figcaption>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic,
-                perferendis blanditiis dicta quaerat illum nisi nihil harum sunt
-                eos, et numquam placeat facilis nesciunt! Maxime assumenda,
-                cupiditate ducimus eum quibusdam molestiae, culpa delectus
-                dolores maiores veritatis expedita voluptatem explicabo aperiam.
-              </figcaption>
-            </figure>
+              <figcaption></figcaption>
+            </figure> -->
             <figure class="skill" id="teamwork">
               <h3>Teamwork</h3>
               <figcaption>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio
-                porro velit nulla, temporibus voluptas eligendi repudiandae
-                dolores? Maiores consectetur magni modi harum iusto ea debitis
-                hic earum. Ullam, expedita laudantium. Officia, optio quas?
+                Always a 'team-player'. Understand psychological aspect of team
+                work and build any relationship based on the mutual respect.
               </figcaption>
             </figure>
           </div>
         </section>
       </section>
 
-      <footer></footer>
+      <!-- <section id="personal">
+        <h2 class="section-name">Personal Info & Facts</h2>
+        <section id="info">
+          <ul>
+            <li>Date of Birth: 30.03.2004</li>
+            <li>Nationality: Belarus</li>
+            <li>Student</li>
+          </ul>
+        </section>
+      </section> -->
+
+      <footer>
+        03.10.2022, designed and developed by T. Petrikevich &copy;
+      </footer>
     </main>
   </body>
 </html>
