feat: skill boxes rework

--- a/index.html
+++ b/index.html
@@ -123,67 +123,62 @@
         </ul> -->
 
         <section id="skill-boxes">
-          <div class="flex-row">
-            <figure class="skill" id="quick-learning">
-              <h3>Quick Learning</h3>
-              <figcaption>
-                Understand new things and learn new technologies quickly. Stick
-                to the concept of constant studying and self-improvement in
-                every aspect of life.
-              </figcaption>
-            </figure>
-            <figure class="skill" id="leadership">
-              <h3>Leadership</h3>
-              <figcaption>
-                Never afraid to take responsibility. Do my best in order to help
-                the team-mates in any circumstances.
-              </figcaption>
-            </figure>
-            <figure class="skill" id="communication">
-              <h3>Communication</h3>
-              <figcaption>
-                Consider communication to be the key to the success of any team
-                or company. Always stay polite and calm with customers and
-                colleagues. Strike up a conversation in any situation. Keep
-                practicing English daily.
-              </figcaption>
-            </figure>
-          </div>
-
-          <div class="flex-row">
-            <figure class="skill" id="diligence">
-              <h3>Diligence</h3>
-              <figcaption>
-                Ready to work as much as possible. Enough physical endurance to
-                stay long on the feet for a long period of time.
-              </figcaption>
-            </figure>
-            <figure class="skill" id="responsibility">
-              <h3>Responsibility</h3>
-              <figcaption>
-                Punctual and attentive. Stay away from bad habbits. Used to
-                waking up early.
-              </figcaption>
-            </figure>
-            <figure class="skill" id="time-managment">
-              <h3>Time Managment</h3>
-              <figcaption>
-                Experienced in time managment and used to multi-tasking. Prefer
-                scheduling and organizing own work and activities.
-              </figcaption>
-            </figure>
-            <!-- <figure class="skill" id="persistence">
+          <figure class="skill" id="quick-learning">
+            <h3>Quick Learning</h3>
+            <figcaption>
+              Understand new things and learn new technologies quickly. Stick to
+              the concept of constant studying and self-improvement in every
+              aspect of life.
+            </figcaption>
+          </figure>
+          <figure class="skill" id="leadership">
+            <h3>Leadership</h3>
+            <figcaption>
+              Never afraid to take responsibility. Do my best in order to help
+              the team-mates in any circumstances.
+            </figcaption>
+          </figure>
+          <figure class="skill" id="communication">
+            <h3>Communication</h3>
+            <figcaption>
+              Consider communication to be the key to the success of any team or
+              company. Always stay polite and calm with customers and
+              colleagues. Strike up a conversation in any situation. Keep
+              practicing English daily.
+            </figcaption>
+          </figure>
+          <figure class="skill" id="diligence">
+            <h3>Diligence</h3>
+            <figcaption>
+              Ready to work as much as possible. Enough physical endurance to
+              stay long on the feet for a long period of time.
+            </figcaption>
+          </figure>
+          <figure class="skill" id="responsibility">
+            <h3>Responsibility</h3>
+            <figcaption>
+              Punctual and attentive. Stay away from bad habbits. Used to waking
+              up early.
+            </figcaption>
+          </figure>
+          <figure class="skill" id="time-managment">
+            <h3>Time Managment</h3>
+            <figcaption>
+              Experienced in time managment and used to multi-tasking. Prefer
+              scheduling and organizing own work and activities.
+            </figcaption>
+          </figure>
+          <!-- <figure class="skill" id="persistence">
               <h3>Persistence</h3>
               <figcaption></figcaption>
             </figure> -->
-            <figure class="skill" id="teamwork">
-              <h3>Teamwork</h3>
-              <figcaption>
-                Always a 'team-player'. Understand psychological aspect of team
-                work and build any relationship based on the mutual respect.
-              </figcaption>
-            </figure>
-          </div>
+          <figure class="skill" id="teamwork">
+            <h3>Teamwork</h3>
+            <figcaption>
+              Always a 'team-player'. Understand psychological aspect of team
+              work and build any relationship based on the mutual respect.
+            </figcaption>
+          </figure>
         </section>
       </section>
 
