--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             </a>
           </li>
         </ul>
+        <p id="birth-date">Date of Birth: 30.03.2004</p>
       </section>
     </header>
     <main>
