feat: finish layout

--- a/index.html
+++ b/index.html
@@ -36,13 +36,16 @@
             </a>
           </li>
         </ul>
-        <p id="birth-date">Date of Birth: 30.03.2004</p>
+        <ul id="personal-info">
+          <li>Date of Birth: 30.03.2004</li>
+          <li>Age: 19</li>
+        </ul>
       </section>
     </header>
     <main>
       <section id="work-experience">
+        <h2 class="section-name">Work Experience</h2>
         <section class="work" id="tti-studio">
-          <h2 class="section-name">Work Experience</h2>
           <figure class="header-caption">
             <h3>Team Lead / Programmer</h3>
             <figcaption>
@@ -69,12 +72,30 @@
           </p>
           <p>
             After 2 years of hard work and at the cost of our spare time we
-            finished the game called
-            <a href="https://thirty-three-infinities.itch.io/sunset-forest"
-              >Sunset Forest</a
-            >
-            under the name of
-            <a href="https://thirty-three-infinities.itch.io/">TTI Studio</a>.
+            finished the game called Sunset Forest under the name of TTI Studio.
+          </p>
+        </section>
+
+        <section class="work" id="counter-attack">
+          <figure class="header-caption">
+            <h3>Interpreter</h3>
+            <figcaption>
+              2019, Counter Attack Game, Scotland (Remotely)
+            </figcaption>
+          </figure>
+          <p>
+            Once I have seen an advertisement for a board game about soccer. I
+            really liked it but unfortunately the price was too high for me at
+            that moment. Then I decided to try contacting the game creators.
+            After a small friendly conversation I offered them translating the
+            game rule book from English to Russian.
+          </p>
+
+          <p>
+            After I finished the work they sent me a game copy with some gifts
+            and a little tip besides that. We still keep the contact with the
+            game creators while the Counter Attack Board Game community is
+            growing rapidly all over the world.
           </p>
         </section>
       </section>
@@ -102,8 +123,9 @@
           </h3>
           <figcaption>
             2021 &mdash; present, Currently a 2nd course student. Average grade:
-            8.5. Highest grade: 10.0 - Computer Science and Software
-            Development. Member of the university's soccer team.
+            8.5<br />
+            Highest grade: 10.0 - Computer Science and Software Development.
+            Member of the university's soccer team.
           </figcaption>
         </figure>
         <p class="note">* Belarusian grading scale is 10-point</p>
@@ -124,6 +146,14 @@
         </ul> -->
 
         <section id="skill-boxes">
+          <figure class="skill" id="communication">
+            <h3>Communication</h3>
+            <figcaption>
+              Consider communication to be the key to the success of any team or
+              company. Always stay polite and calm with people regardless of
+              situation. Keep practicing English daily.
+            </figcaption>
+          </figure>
           <figure class="skill" id="quick-learning">
             <h3>Quick Learning</h3>
             <figcaption>
@@ -132,54 +162,46 @@
               aspect of life.
             </figcaption>
           </figure>
-          <figure class="skill" id="leadership">
+          <!-- <figure class="skill" id="leadership">
             <h3>Leadership</h3>
             <figcaption>
               Never afraid to take responsibility. Do my best in order to help
               the team-mates in any circumstances.
             </figcaption>
-          </figure>
-          <figure class="skill" id="communication">
-            <h3>Communication</h3>
-            <figcaption>
-              Consider communication to be the key to the success of any team or
-              company. Always stay polite and calm with customers and
-              colleagues. Strike up a conversation in any situation. Keep
-              practicing English daily.
-            </figcaption>
-          </figure>
+          </figure> -->
           <figure class="skill" id="diligence">
             <h3>Diligence</h3>
             <figcaption>
               Ready to work as much as possible. Enough physical endurance to
-              stay long on the feet for a long period of time.
+              stay long on the feet.
             </figcaption>
           </figure>
-          <figure class="skill" id="responsibility">
+          <!-- <figure class="skill" id="responsibility">
             <h3>Responsibility</h3>
             <figcaption>
               Punctual and attentive. Stay away from bad habbits. Used to waking
               up early.
             </figcaption>
-          </figure>
-          <figure class="skill" id="time-managment">
-            <h3>Time Managment</h3>
+          </figure> -->
+          <figure class="skill" id="time-managment-responsibility">
+            <h3>Responsibility</h3>
             <figcaption>
-              Experienced in time managment and used to multi-tasking. Prefer
-              scheduling and organizing own work and activities.
+              Experienced in time managment and multi-tasking. Prefer scheduling
+              and organizing own work and activities. Stay away from bad
+              habbits. Used to waking up early.
             </figcaption>
           </figure>
           <!-- <figure class="skill" id="persistence">
               <h3>Persistence</h3>
               <figcaption></figcaption>
             </figure> -->
-          <figure class="skill" id="teamwork">
+          <!-- <figure class="skill" id="teamwork">
             <h3>Teamwork</h3>
             <figcaption>
               Always a 'team-player'. Understand psychological aspect of team
               work and build any relationship based on the mutual respect.
             </figcaption>
-          </figure>
+          </figure> -->
         </section>
       </section>
 
@@ -194,8 +216,46 @@
         </section>
       </section> -->
 
+      <section id="interests">
+        <h2 class="section-name">Interests</h2>
+        <section id="interests-section">
+          <figure class="header-caption" id="sports">
+            <h3>Sports</h3>
+            <figcaption>
+              Professional soccer player 2012 &mdash; 2021. Captain of the team
+              and winner of the 'Belarusian Youth Soccer Championship' in 2019.
+            </figcaption>
+          </figure>
+          <figure class="header-caption" id="writing">
+            <h3>Writing</h3>
+            <figcaption>
+              Know basic script writing and formatting concepts. Co-wrote and
+              translated the script for indie-game. Practice composing poems.
+            </figcaption>
+          </figure>
+        </section>
+      </section>
+
       <footer>
-        03.10.2022, designed and developed by T. Petrikevich &copy;
+        <h2>References</h2>
+        <ol id="References">
+          <li>
+            <a href="https://thirty-three-infinities.itch.io/sunset-forest">
+              Sunset Forest Game
+            </a>
+          </li>
+          <li>
+            <a href="https://thirty-three-infinities.itch.io/">TTI Studio</a>
+          </li>
+          <li>
+            <a href="https://counterattackgame.com/rules/">
+              Counter Attack Board Game - Rule Books
+            </a>
+          </li>
+        </ol>
+        <div id="copyright">
+          03.10.2022, designed and developed by T. Petrikevich &copy;
+        </div>
       </footer>
     </main>
   </body>
