feat: add references to footer

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <header>
       <h1>Timofey Petrikevich</h1>
-      <h2>Work and Travel USA</h2>
+      <h2>Work and Travel USA, InterExchange</h2>
       <section id="about-me-contacts">
         <article id="about-me">
           Accomplishing young student with passion to <em>Computer Science</em>,
@@ -239,6 +239,11 @@
       <footer>
         <h2>References</h2>
         <ol id="References">
+          <li>
+            <a href="https://www.interexchange.org/work-travel-usa/host/">
+              InterExchange Program for Hosts (Employers)
+            </a>
+          </li>
           <li>
             <a href="https://thirty-three-infinities.itch.io/sunset-forest">
               Sunset Forest Game
