feat: work rewrite

--- a/index.html
+++ b/index.html
@@ -54,25 +54,18 @@
             </figcaption>
           </figure>
           <p>
-            When I was a high-school student I started self-studying game
-            development and programming in general. After 1,5 years of learning
-            I decided to team-up with some artist to create our first game.
+            After 1,5 years of self-studying game design and programming I
+            gathered a team to develop our first indie-game. The team consisted
+            of 4 people from different parts of the world and we used English
+            for communication.
           </p>
 
           <p>
-            So I found a young brazilian artist on the community website of the
-            Game Maker Engine. During the development our team had grown to 4
-            people as we added music composer and sound designer.
-          </p>
-          <p>
-            Both of them were twice as old as me at that moment but I still
-            managed to coordinate our team-work despite the fact that all the
-            team-members worked for free, driven by the game idea and possible
-            revenue share as a result.
-          </p>
-          <p>
-            After 2 years of hard work and at the cost of our spare time we
-            finished the game called Sunset Forest under the name of TTI Studio.
+            As a leader of the team I had to manage such things as cooperation
+            of different team members and their roles, design ideas and
+            marketing strategy. After 2 years of working remotely we finished
+            our game called "Sunset Forest". I registered the team under the
+            name of TTI Studio and we successfully launch it.
           </p>
         </section>
 
@@ -84,6 +77,11 @@
             </figcaption>
           </figure>
           <p>
+            Translated the rule book for Counter Attack Board Game from English
+            to Russian. Used my soccer experience and game design skills to
+            suggest the game creators some new ideas as well.
+          </p>
+          <!-- <p>
             Once I have seen an advertisement for a board game about soccer. I
             really liked it but unfortunately the price was too high for me at
             that moment. Then I decided to try contacting the game creators.
@@ -96,7 +94,7 @@
             and a little tip besides that. We still keep the contact with the
             game creators while the Counter Attack Board Game community is
             growing rapidly all over the world.
-          </p>
+          </p> -->
         </section>
       </section>
 
