feat: shorten descriptions, remove achievements

--- a/index.html
+++ b/index.html
@@ -100,33 +100,26 @@
 
       <section id="education">
         <h2 class="section-name">Education</h2>
-        <figure class="header-caption" id="school">
-          <h3>Gymnasium №13, Minsk</h3>
-          <figcaption>
-            2010 &mdash; 2021, Graduated with the "Gold medal for academic
-            excellence". Average grade: 9.8*
-          </figcaption>
-        </figure>
-        <!-- <figure class="header-caption" id="english">
-          <h3>English with Private Tutor</h3>
-          <figcaption>
-            2010 &mdash; 2020, Active learning of English language, golden medal for
-            the victory in English competition.
-          </figcaption>
-        </figure> -->
+
         <figure class="header-caption" id="university">
           <h3>
             Belarusian State University, Faculty of Applied Math and Computer
             Science
           </h3>
           <figcaption>
-            2021 &mdash; present, Currently a 2nd course student. Average grade:
-            8.5<br />
-            Highest grade: 10.0 - Computer Science and Software Development.
-            Member of the university's soccer team.
+            2021 &mdash; present, Member of the university's soccer team.
           </figcaption>
         </figure>
-        <p class="note">* Belarusian grading scale is 10-point</p>
+
+        <figure class="header-caption" id="school">
+          <h3>Gymnasium №13, Minsk</h3>
+          <figcaption>
+            2010 &mdash; 2021, Graduated with the "Gold Medal for Academic
+            Excellence"
+          </figcaption>
+        </figure>
+
+        <!-- <p class="note">* Belarusian grading scale is 10-point</p> -->
       </section>
 
       <section id="skills">
@@ -143,7 +136,7 @@
           <li><a href="#responsibility">Responsibility</a></li>
         </ul> -->
 
-        <section id="skill-boxes">
+        <div id="skill-boxes">
           <figure class="skill" id="communication">
             <h3>Communication</h3>
             <figcaption>
@@ -200,7 +193,7 @@
               work and build any relationship based on the mutual respect.
             </figcaption>
           </figure> -->
-        </section>
+        </div>
       </section>
 
       <!-- <section id="personal">
@@ -216,23 +209,31 @@
 
       <section id="interests">
         <h2 class="section-name">Interests</h2>
-        <section id="interests-section">
-          <figure class="header-caption" id="sports">
-            <h3>Sports</h3>
-            <figcaption>
-              Professional soccer player 2012 &mdash; 2021. Captain of the team
-              and winner of the 'Belarusian Youth Soccer Championship' in 2019.
-            </figcaption>
-          </figure>
-          <figure class="header-caption" id="writing">
-            <h3>Writing</h3>
-            <figcaption>
-              Know basic script writing and formatting concepts. Co-wrote and
-              translated the script for indie-game. Practice composing poems.
-            </figcaption>
-          </figure>
-        </section>
+        <div class="cv-section-div">
+          <section id="interests-section">
+            <figure class="header-caption" id="sports">
+              <h3>Sports</h3>
+              <figcaption>
+                Professional soccer player 2012 &mdash; 2021. Captain of the
+                team and winner of the 'Belarusian Youth Soccer Championship' in
+                2019.
+              </figcaption>
+            </figure>
+            <figure class="header-caption" id="writing">
+              <h3>Writing</h3>
+              <figcaption>
+                Know basic script writing and formatting concepts. Co-wrote and
+                translated the script for indie-game. Practice composing poems.
+              </figcaption>
+            </figure>
+          </section>
+        </div>
       </section>
+
+      <!-- <section id="achievements">
+        <h2 class="section-name">Achievements</h2>
+        <div class="cv-section-div"></div>
+      </section> -->
 
       <footer>
         <h2>References</h2>
