--- a/index.html
+++ b/index.html
@@ -11,13 +11,34 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="Images/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="Images/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="Images/favicon-16x16.png"
+    />
+    <link rel="manifest" href="Images/site.webmanifest" />
+    <link rel="mask-icon" href="Images/safari-pinned-tab.svg" color="#5bbad5" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
     <!-- <script src="script.js" defer></script> -->
-    <title>CV - Petrikevich</title>
+    <title>CV</title>
   </head>
   <body>
     <header>
-      <h1>Timofey Petrikevich</h1>
-      <h2>Work and Travel USA, InterExchange</h2>
+      <h1>Tsimafei Petrykevich</h1>
+      <h2><span id="wat-header">Work and Travel</span> program participant</h2>
       <section id="about-me-contacts">
         <article id="about-me">
           Accomplishing young student with passion to <em>Computer Science</em>,
@@ -32,7 +53,10 @@
           <li id="adress">Minsk, Belarus</li>
           <li id="inter-exchange">
             <a href="https://www.interexchange.org/work-travel-usa/">
-              <img src="Images/InterExchangeLogo.png" alt="InterExchangeLogo" />
+              <img
+                src="Images/InterExchangeLogoTransparent.png"
+                alt="InterExchangeLogo"
+              />
             </a>
           </li>
         </ul>
