feat: set position

--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
   <body>
     <header>
       <h1>Tsimafei Petrykevich</h1>
-      <h2><span id="wat-header">Work and Travel</span> program participant</h2>
+      <h2>
+        Retail Sales Technology Supervisor,
+        <span id="wat-header">Work and Travel</span> program participant
+      </h2>
       <section id="about-me-contacts">
         <article id="about-me">
           Accomplishing young student with passion to <em>Computer Science</em>,
