feat: change text

--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
     <header>
       <h1>Tsimafei Petrykevich</h1>
       <h2>
-        Retail Sales Technology Supervisor,
-        <span id="wat-header">Work and Travel</span> program participant
+        <span id="wat-header">Work and Travel</span>
       </h2>
       <section id="about-me-contacts">
         <article id="about-me">
@@ -72,6 +71,25 @@
     <main>
       <section id="work-experience">
         <h2 class="section-name">Work Experience</h2>
+        <section class="work" id="tti-studio">
+          <figure class="header-caption">
+            <h3>Retail Sales Associate</h3>
+            <figcaption>2021 &mdash; present, Sneaker-Head, Belarus</figcaption>
+          </figure>
+          <p>
+            As a retail sales associate in Sneaker-Head company I provide
+            excellent customer experience by offering a helping hand to the
+            clients and making suggestions or recommendations according to their
+            preferences.
+          </p>
+
+          <p>
+            I also maintain local store and keep it clean, track the shelves to
+            be well-organized and structured. To improve my skills as a sales
+            associate I follow and analyze visitors' behaviour daily.
+          </p>
+        </section>
+
         <section class="work" id="tti-studio">
           <figure class="header-caption">
             <h3>Team Lead / Programmer</h3>
